fix icon wrapping for buttons

--- a/app/assets/stylesheets/rad_common/rad_bootstrap_overrides.scss
+++ b/app/assets/stylesheets/rad_common/rad_bootstrap_overrides.scss
@@ -57,6 +57,12 @@ label {
 }
 /* end card styles to emulate previous panel style capability*/
 
+/* to prevent button icons from wrapping*/
+.btn
+{
+  white-space: nowrap;
+}
+
 /* this is used because the "as: :hidden" option adds a hidden class to the form group, but that class was removed in b4. So for now without this, we're left with extra spacing around a hidden input. */
 .form-group.hidden {
   display: none;
